[project]
name = "pytune_health"
version = "1.0.0"
description = "PyTune health monitoring microservice"
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.7",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
package = false